Bug 1163081 - Bluish background color behind "Check to see if your plugins are up to date" link looks weird. r=mossop
UltraBlame original commit: 085d3c90c1fe3be2af04f252a86fd3bc5957befe

--- a/toolkit/themes/shared/extensions/extensions.inc.css
+++ b/toolkit/themes/shared/extensions/extensions.inc.css
@@ -57,11 +57,6 @@
 }
 
 
-#addons-page .global-info-container {
-  background-color: #f3f7fb;
-  border-top-right-radius: 2px;
-  border-top-left-radius: 2px;
-}
 
 
 
